# ChangeLog for dev-util/webcpp
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/ChangeLog,v 1.8 2006/05/01 01:58:52 weeve Exp $

  01 May 2006; Jason Wever <weeve@gentoo.org> webcpp-0.8.2.ebuild:
  Stable on SPARC.

  07 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> webcpp-0.8.2.ebuild,
  webcpp-0.8.4.ebuild:
  Don't assume GNU ld. Remove src_compile as it falls back to the default.

  30 Sep 2005; Luis Medinas <metalgod@gentoo.org> webcpp-0.8.4.ebuild:
  Added ~amd64 keywords.

  30 May 2005; Sven Wegener <swegener@gentoo.org> webcpp-0.8.2.ebuild,
  webcpp-0.8.4.ebuild:
  Moved from gcc.eclass to toolchain-funcs.eclass, bug #92745.

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> webcpp-0.8.2.ebuild:
  Stable on ppc.

  31 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

*webcpp-0.8.4 (15 Aug 2004)

  15 Aug 2004; Stuart Herbert <stuart@gentoo.org> +webcpp-0.8.2.ebuild,
  +webcpp-0.8.4.ebuild:
  Moved from net-www/webcpp to dev-util/webcpp.

*webcpp-0.8.4 (17 Jul 2004)

  17 Jul 2004; Mike Frysinger <vapier@gentoo.org> -webcpp-0.8.0-r1.ebuild,
  -webcpp-0.8.0.ebuild, +webcpp-0.8.4.ebuild:
  Version bump #57211 by sekretarz.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  webcpp-0.8.0-r1.ebuild, webcpp-0.8.0.ebuild, webcpp-0.8.2.ebuild:
  virtual/glibc -> virtual/libc

  11 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> webcpp-0.8.2.ebuild:
  Stable on alpha.

*webcpp-0.8.2 (02 Jul 2003)

  02 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*webcpp-0.8.0-r1 (20 Mar 2003)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> webcpp-0.8.0-r1.ebuild:
  removed pic cruft

*webcpp-0.8.0 (16 Feb 2003)

  16 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.