@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/webcpp-0.8.2.ebuild,v 1.5 2006/05/01 01:58:52 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/webcpp-0.8.2.ebuild,v 1.6 2006/12/11 07:43:29 beu Exp $
 
 inherit toolchain-funcs
 
@@ -14,9 +14,6 @@ SRC_URI="mirror://sourceforge/webcpp/${P}-src.tar.gz"
 SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="alpha ~hppa ~mips ppc sparc x86"
-
-RDEPEND="sys-devel/gcc
-	virtual/libc"
 
 pkg_setup() {
 	[ `gcc-major-version` -eq 2 ] \
