@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/webcpp-0.8.4.ebuild,v 1.4 2005/10/07 14:47:26 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/webcpp-0.8.4.ebuild,v 1.5 2006/12/11 07:43:29 beu Exp $
 
 inherit toolchain-funcs
 
@@ -13,9 +13,6 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~mips ~ppc ~sparc ~x86"
 IUSE=""
-
-RDEPEND="sys-devel/gcc
-	virtual/libc"
 
 pkg_setup() {
 	[ `gcc-major-version` -eq 2 ] \
