@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/webcpp
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/ChangeLog,v 1.8 2006/05/01 01:58:52 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/webcpp/ChangeLog,v 1.9 2006/12/11 07:43:29 beu Exp $
+
+  11 Dec 2006; Elfyn McBratney <beu@gentoo.org> webcpp-0.8.2.ebuild,
+  webcpp-0.8.4.ebuild:
+  Kill redundant RDEPEND.
 
   01 May 2006; Jason Wever <weeve@gentoo.org> webcpp-0.8.2.ebuild:
   Stable on SPARC.
